# TatraBankaChallenge

./: .gitignore  Cargo.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/legend/: legend.tsx
frontend/src/person/: person.ts
frontend/src/projected-retirement/: projected-retirement.tsx
frontend/src/retirement-wizzard/: retirement-wizzard.tsx
frontend/src/stats/: statistics.tsx
migrations/: 20230318011035_initial.sql
src/: main.rs
src/auth/: controller.rs  jwt.rs  mod.rs
src/config/: env.rs
src/user/: controller.rs
src/utils/: mod.rs  web.rs
